[tool.poetry]
name = "sceptre-template-handler-template"
version = "0.0.1"
packages = [{ include = "template_handler" }]
readme = "README.md"
homepage = "https://github.com/Sceptre/sceptre-template-handler-template"
repository = "https://github.com/Sceptre/sceptre-template-handler-template"
authors = ["Sceptre <sceptreorg@gmail.com>"]
description = "A Github template for Sceptre template handlers"
keywords = ["sceptre", "sceptre-handler"]
license = "Apache-2.0"
classifiers = [
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Environment :: Console",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[tool.poetry.plugins."sceptre.template_handlers"]
"custom" = "template_handler.custom:Custom"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.1"
tox = "^3.23.0"
pytest = "^7.4.3"
pytest-cov = "^4.0.0"
sceptre = "^4.0"
tox-gh-matrix = "^0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
